- bug fix in the Symbol method `equals` where identical domain symbols exist in different containers
- `uelPriority` argument in write does not have to be a subset of the universe set. Users can register any UELs using the `uelPriority` argument.

GAMS Transfer R v2.4.0
==================
- bug fix in read for `Variable` and `Equation` classes where the `lower` and `upper` attributes were interchanged.

GAMS Transfer R v2.2.0
==================
- fixed bug with library unload upon read or write
- performance improvement in setting records for symbols

GAMS Transfer R v1.18.0
==================
- Symbol method `isValid` now checks also for scalars with more than one record entries
- bug fix in symbol `description`
- added `isScalar` property for the symbols of type `Variable` and `Equation`
- Symbol method `getCardinality` is removed
- Updated symbol method `reorderUELs()`. If the argument `uels` is not passed UELs are reordered based on the records
- Symbol method `toDense()` now requires domain UELs and domain records to be in the same order and unused UELs in the domain (if any) at the end of the UEL list
- Fixed the display of long error messages
- bug fix in accessing Container symbols in a case-insensitive manner
- bug fix in the Container method `describeAliases`
- Container `read` preserves the domain type from the source and avoids domain linking by symbol name

GAMS Transfer R v1.16.0
==================
- added checks for singleton and multidimensional checksin `Symbol` method `isValid()`
- changed the default domain labels. User-specified domain labels are preserved if unique
- performance improvement in `Container` method `read`

GAMS Transfer R v1.14.0
==================
- Significant performance improvements to Container write method
- bug fix in Container read when reading a `Symbol` with unused UELs
- bug fix in `todense` method for `Symbol`

GAMS Transfer R v1.12.0
==================
- released for MacOS ARM64
- bug fix in writing empty container