@@ -53,7 +53,7 @@
     max_vals = unlist(lapply(columns, function(c) {
       if (!is.null(self$records) && is.null(self$records[[c]])) {
         if (inherits(self, "Parameter")) return(0)
-        default_value = self$.getDefaultValues(columns=c)
+        default_value = private$.getDefaultValues(columns=c)
         return(default_value)
       }
       else {
@@ -79,7 +79,7 @@
     min_vals = unlist(lapply(columns, function(c) {
       if (!is.null(self$records) && is.null(self$records[[c]])) {
         if (inherits(self, "Parameter")) return(0)
-        default_value = self$.getDefaultValues(columns=c)
+        default_value = private$.getDefaultValues(columns=c)
         return(default_value)
       }
       else {
@@ -105,7 +105,7 @@
     mean_vals = unlist(lapply(columns, function(c) {
       if (!is.null(self$records) && is.null(self$records[[c]])) {
         if (inherits(self, "Parameter")) return(0)
-        default_value = self$.getDefaultValues(columns=c)
+        default_value = private$.getDefaultValues(columns=c)
         return(default_value)
       }
       else {
@@ -132,7 +132,7 @@
     max_abs_vals = unlist(lapply(columns, function(c) {
       if (!is.null(self$records) && is.null(self$records[[c]])) {
         if (inherits(self, "Parameter")) return(0)
-        default_value = self$.getDefaultValues(columns=c)
+        default_value = private$.getDefaultValues(columns=c)
         return(abs(default_value))
       }
       else {
@@ -858,10 +858,10 @@
     if (self$dimension  == 0) {
       if (is.null(self$records[[column]])) {
         if (inherits(self, "Parameter")) {
-          def_value = self$.getDefaultValues()
+          def_value = private$.getDefaultValues()
         }
         else {
-          def_value = self$.getDefaultValues(columns=column)
+          def_value = private$.getDefaultValues(columns=column)
         }
         return(def_value)
       }
@@ -927,10 +927,10 @@
     a = array(0, dim = self$shape())
     if (is.null(self$records[[column]])) {
       if (inherits(self, "Parameter")) {
-        def_value = self$.getDefaultValues()
+        def_value = private$.getDefaultValues()
       }
       else {
-        def_value = self$.getDefaultValues(columns=column)
+        def_value = private$.getDefaultValues(columns=column)
       }
       a[matrix(unlist(idx), ncol=length(idx))] = def_value
     }
@@ -1338,7 +1338,7 @@
             if (is.null(self$records[[c]])) {
               if (inherits(self, "Parameter")) return(0)
 
-              if (SpecialValues[[specialValueFunc]](self$.getDefaultValues(columns=c))) {
+              if (SpecialValues[[specialValueFunc]](private$.getDefaultValues(columns=c))) {
                 return(self$numberRecords)
               }
               else {
@@ -1656,7 +1656,7 @@
             def_values = 0
           }
           else {
-            def_values = self$.getDefaultValues(columns=attr)
+            def_values = private$.getDefaultValues(columns=attr)
           }
           if (self_column_exists && !other_column_exists) {
             if (any(self$records[[attr]] != replicate(self$numberRecords, def_values))) {
@@ -1753,7 +1753,7 @@
             def_values = 0
           }
           else {
-            def_values = self$.getDefaultValues(columns=attr)
+            def_values = private$.getDefaultValues(columns=attr)
           }
 
           if (self_column_exists && !other_column_exists) {
