@@ -17,6 +17,7 @@ GAMS Transfer R v2.6.0
 - Records columns that are not specified by the user in a dataframe are not auto completed to save memory. For example, a set with only the domain columns will now not have the `element_text` columns. A default valuer is assumed for the missing attributes.
 - bug fix in the Symbol method `equals` where identical domain symbols exist in different containers
 - `uelPriority` argument in write does not have to be a subset of the universe set. Users can register any UELs using the `uelPriority` argument.
+- new field `defaultValues` for symbols of type `Parameter`, `Variable`, and `Equation`.
 
 GAMS Transfer R v2.4.0
 ==================
